# Ylab_rest_api

./: Dockerfile  Dockerfile_tests  README.md  alembic.ini  docker-compose.yml  docker-compose_tests.yml  entrypoint.sh  pyproject.toml  run.py  setup.cfg  test_entrypoint.sh
celery_settings/: celery_config.py
src/: __init__.py
src/admin/: Menu.xlsx
src/api/request_models/: request_base.py
src/api/response_models/: dish_response.py  menu_response.py  submenu_response.py
src/api/routers/: dishes_router.py  menus_router.py  service_router.py  submenus_router.py
src/celery_settings/: celery_config.py
src/core/: exceptions.py  settings.py
src/db/: db.py  models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 748f3550acdc_initial_migration.py  949e280ab1ba_initial_migration.py
src/repositories/: abstract_repository.py  dishes_repository.py  menus_repository.py  submenus_repository.py
src/repository/: abstract_repository.py  menus_repository.py  submenus_repository.py
src/services/: cache_service.py  dishes_service.py  menus_service.py  submenus_service.py
src/tasks/: excel_to_db.py
tests/: all_menus_test.py  conftest.py  dish_test.py  menu_test.py  scenario_test.py  submenu_test.py
